k8s/dashboard-traefik.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik-system
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`dashboard.devopsrn.shop`)
    kind: Rule
    services:
      - name: api@internal
        kind: TraefikService
